isolate shapes in table

--- a/notebooks/Find the Pieces.ipynb
+++ b/notebooks/Find the Pieces.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,11 +331,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def paint_pieces(img):\n",
+    "def annotate(img):\n",
     "    \n",
     "    ## isolate HUE\n",
     "    hsv = cv2.cvtColor(img, cv2.COLOR_RGB2HSV)\n",
@@ -362,6 +362,13 @@
     "    ## get all of the shapes\n",
     "    im2, all_contours, hierarchy = cv2.findContours(laplacian, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE)\n",
     "\n",
+    "    ## isolate the shapes inside the table area\n",
+    "    def point_in_box(point, box):\n",
+    "        retval = point[0] > min(box[:,0]) and point[0] < max(box[:,0]) and point[1] > min(box[:,1]) and point[1] < max(box[:,1])\n",
+    "        return retval\n",
+    "\n",
+    "    contours_in_box = [c for c in all_contours if np.all(point_in_box(c[0,0,:], box))]\n",
+    "\n",
     "    ## filter out large shapes\n",
     "    def get_area(c):\n",
     "        m = cv2.moments(c)\n",
@@ -376,12 +383,12 @@
     "    rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)\n",
     "    cv2.drawContours(rgb, [box], 0, (255, 0, 0), 3)\n",
     "    cv2.drawContours(rgb, circular_contours, -1, (0,255,0), 5)\n",
-    "    show_img(rgb)"
+    "    return rgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +403,8 @@
     }
    ],
    "source": [
-    "paint_pieces(img)"
+    "annotated = annotate(img)\n",
+    "show_img(annotated)"
    ]
   },
   {
